package seedu.address.model;

import java.nio.file.Path;
import java.util.List;
import java.util.function.Predicate;

import javafx.collections.ObservableList;
import seedu.address.commons.core.GuiSettings;
import seedu.address.model.person.Person;
import seedu.address.model.team.Team;

/**
 * The API of the Model component.
 */
public interface Model {
    /** {@code Predicate} that always evaluate to true */
    Predicate<Person> PREDICATE_SHOW_ALL_PERSONS = unused -> true;

    /**
     * Replaces user prefs data with the data in {@code userPrefs}.
     */
    void setUserPrefs(ReadOnlyUserPrefs userPrefs);

    /**
     * Returns the user prefs.
     */
    ReadOnlyUserPrefs getUserPrefs();

    /**
     * Returns the user prefs' GUI settings.
     */
    GuiSettings getGuiSettings();

    /**
     * Sets the user prefs' GUI settings.
     */
    void setGuiSettings(GuiSettings guiSettings);

    /**
     * Returns the user prefs' address book file path.
     */
    Path getAddressBookFilePath();

    /**
     * Sets the user prefs' address book file path.
     */
    void setAddressBookFilePath(Path addressBookFilePath);

    /**
     * Replaces address book data with the data in {@code addressBook}.
     */
    void setAddressBook(ReadOnlyAddressBook addressBook);

    /** Returns the AddressBook */
    ReadOnlyAddressBook getAddressBook();

    /**
     * Returns true if a person with the same identity as {@code person} exists in the address book.
     * A person is considered the same if they have the same email, phone number, or GitHub username.
     */
    boolean hasPerson(Person person);

    /**
     * Returns true if a person with the same GitHub username as {@code githubUsername} exists in the address book.
     */
    boolean hasPersonWithGithub(String githubUsername);

    /**
     * Returns true if a person with the same identity as {@code person} exists in the address book,
     * excluding the specified {@code personToExclude}.
     */
    boolean hasPersonExcluding(Person person, Person personToExclude);

    /**
     * Deletes the given person.
     * The person must exist in the address book.
     */
    void deletePerson(Person target);

    /**
     * Adds the given person.
     * {@code person} must not already exist in the address book.
     */
    void addPerson(Person person);

    /**
     * Replaces the given person {@code target} with {@code editedPerson}.
     * {@code target} must exist in the address book.
     * The person identity of {@code editedPerson} must not be the same as another existing person in the address book.
     */
    void setPerson(Person target, Person editedPerson);

    /** Returns an unmodifiable view of the filtered person list */
    ObservableList<Person> getFilteredPersonList();

    /**
     * Updates the filter of the filtered person list to filter by the given {@code predicate}.
     * @throws NullPointerException if {@code predicate} is null.
     */
    void updateFilteredPersonList(Predicate<Person> predicate);

    //=========== Team Management ==================================================================================

    /**
     * Returns true if a team with the same identity as {@code team} exists in the address book.
     */
    boolean hasTeam(Team team);

    /**
     * Returns true if a team with the given name exists in the address book.
     */
    boolean hasTeamWithName(String teamName);

    /**
     * Returns the team with the given name.
     */
    Team getTeamByName(String teamName);

    /**
     * Adds the given team.
     * {@code team} must not already exist in the address book.
     */
    void addTeam(Team team);

    /**
     * Replaces the given team {@code target} with {@code editedTeam}.
     * {@code target} must exist in the address book.
     * The team identity of {@code editedTeam} must not be the same as another existing team in the address book.
     */
    void setTeam(Team target, Team editedTeam);

    /**
     * Removes the given team.
     * {@code team} must exist in the address book.
     */
    void deleteTeam(Team team);

    /**
     * Adds a person to the specified team.
     * The person and team must exist in the address book.
     */
    void addPersonToTeam(Person person, Team team);

    /**
     * Removes a person from the specified team.
     * The person and team must exist in the address book.
     */
    void removePersonFromTeam(Person person, Team team);

    /**
     * Sets the Team of all person in {@code persons} to {@code Team.NONE}
     */
    void setPersonsTeamToNone(List<Person> persons);

    /**
     * Returns the team that contains the given person.
     * Returns null if the person is not in any team.
     */
    Team getTeamContainingPerson(Person person);
}
